# server/app/models_registry.py
@@ -10,6 +10,7 @@ from app.modules.messages import models as _message_models
 from app.modules.notifications import models as _notification_models
 from app.modules.totp import models as _totp_models
 from app.modules.users import models as _user_models
+from app.modules.webhooks import models as _webhook_models
 
 __all__ = [
     "Base",
@@ -22,4 +23,5 @@ __all__ = [
     "_notification_models",
     "_totp_models",
     "_user_models",
+    "_webhook_models",
 ]
